deployment/consumer-ui/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: consumer-ui
    app.kubernetes.io/instance: consumer-ui
  name: consumer-ui
  namespace: product-material-pass
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: consumer-ui
