deployment/consumer-ui/ingress-edc.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-ingress
  namespace: product-material-pass
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"

    # If you encounter a redirect loop or are getting a 307 response code
    # then you need to force the nginx ingress to connect to the backend using HTTPS.
    #
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  rules:
    - host: materialpass.demo.catena-x.net
      http:
        paths:
          - path: /consumer
            pathType: Prefix
            backend:
              service:
                name: consumer-ui
                port:
                  number: 8080
  tls:
    - hosts:
        - materialpass.demo.catena-x.net
      secretName: tls-secret
